# Detection-of-Mental-Disorders-Extension

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  DEVELOPMENT.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: docker-build.yml  lint.yml  release.yml  test.yml
backend/: .dockerignore  .gitignore  Dockerfile  bootstrap_model.py  convert_to_onnx.py  quantize_onnx.py  requirements-dev.txt  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  inference.py  routes.py  store.py  wellbeing.py
backend/app/research/: __init__.py  data_v2.py  export_v2.py  metrics_v2.py  training_v2.py
backend/app/static/: app.css  app.js
backend/app/templates/: index.html
backend/app/v2/: __init__.py  inference.py  service.py  taxonomy.py
backend/scripts/: __init__.py  build_final_dataset.py  evaluate_v2.py  export_student_onnx.py  prepare_weak_labels.py  sample_annotation_set.py  validate_splits.py
backend/tests/: conftest.py  test_analyze.py  test_analyze_v2.py  test_config.py  test_health.py  test_product.py  test_research_v2.py
docs/v2/: annotation-guidelines.md  dataset-card.md  error-analysis-template.md  ethics-and-limitations.md  model-card.md
extension/: .prettierrc  background.js  config.js  content.css  content.js  manifest.json  package-lock.json  package.json  page-monitor.js  popup.html  styles.css
extension/js/: analysis.js  api.js  backend-api.js  chart.js  comments.js  main.js  shield.js  state.js  ui.js  wellbeing-storage.js
extension/libs/: chart.umd.min.js
research/configs/: baseline_roberta_single_label.json  evaluation.json  student_distillation.json  teacher_deberta_no_dapt.json  teacher_deberta_with_dapt.json
research/manifests/: dataset_schema_v2.json
