[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-of-mental-disorders-extension"
version = "1.1.3"
description = "Backend API and tooling for the Detection of Mental Disorders extension."
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.0,<4.0.0",
    "flask-cors>=6.0.0,<7.0.0",
    "gunicorn>=23.0.0,<26.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-flask>=1.3.0,<2.0.0",
    "requests-mock>=1.11.0,<2.0.0",
    "ruff>=0.3.0,<0.4.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "node_modules",
    "extension",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"] # Match flake8 extend-ignore

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
