[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-of-mental-disorders-extension"
version = "2.0.0"
description = "Backend API and tooling for the Mental Health Signal Analysis extension."
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.0,<4.0.0",
    "flask-cors>=6.0.0,<7.0.0",
    "gunicorn>=23.0.0,<26.0.0",
]

[project.optional-dependencies]
ml = [
    "onnxruntime>=1.20.0,<2.0.0",
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
]
research = [
    "accelerate>=0.34.0,<1.0.0",
    "datasets>=2.21.0,<3.0.0",
    "evaluate>=0.4.3,<0.5.0",
    "mlflow>=2.17.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "onnx>=1.16.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-flask>=1.3.0,<2.0.0",
    "requests-mock>=1.11.0,<2.0.0",
    "ruff>=0.3.0,<0.16.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "node_modules",
    "extension",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"] # Match flake8 extend-ignore

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[project.scripts]
prepare-weak-labels = "scripts.prepare_weak_labels:main"
sample-annotation-set = "scripts.sample_annotation_set:main"
build-final-dataset = "scripts.build_final_dataset:main"
validate-splits = "scripts.validate_splits:main"
evaluate-v2 = "scripts.evaluate_v2:main"
export-student-onnx = "scripts.export_student_onnx:main"
